--- a/style.css
+++ b/style.css
@@ -200,3 +200,30 @@ ul a{
     margin-top: 10px;
     color: #dddddd;
 }
+.foot-panel3{
+    height:70px;
+    background-color: #222f3d;
+    border-top: 0.01px solid white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.logo2{
+    height:50px;
+    width:100px;
+    background-image: url(amazon_logo.png);
+    background-size: cover;
+}
+.foot-panel4{
+    background-color: #0f1111;
+    height:80px;
+    color: white;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 0.7rem;
+}
+.copyright{
+    padding-top: 10px;
+}
